infra/envoy/config/envoy.yaml

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8888 }


static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
      - filters:
          - name: envoy.filtres.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                virtual_hosts:
                - name: default
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: backend }
              generate_request_id: true
              tracing:
                provider:
                  name: envoy.tracers.opentelemetry
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                    grpc_service:
                      envoy_grpc:
                        cluster_name: opentelemetry_collector
                      timeout: 3s
                    service_name: envoy
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  format: "{\"time\":\"%START_TIME%\",\"method\":\"%REQ(:METHOD)%\",\"host\":\"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\",\"traceparent\":\"%REQ(TRACEPARENT)%\",\"referer\":\"%REQ(REFERER)%\",\"reqtime\":%DURATION%,\"requestid\":\"%REQ(X-REQUEST-ID)%\",\"scheme\":\"%REQ(:SCHEME)%\",\"protocol\":\"%PROTOCOL%\",\"size\":%BYTES_RECEIVED%,\"status\":%RESPONSE_CODE%,\"ua\":\"%REQ(USER-AGENT)%\",\"uri\":\"%REQ(:PATH)%\",\"vhost\":\"%REQ(:AUTHORITY)%\"}\n"
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: backend
      connect_timeout: 1s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: backend
                    port_value: 8081
    - name: opentelemetry_collector
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: opentelemetry_collector
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: otel-collector
                    port_value: 4317
